# tic-tac-toe

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TicTacToe.sln  current_game_state_5.md  current_game_state_7.md  dotnet-tools.json  network_requests.txt  test-e2e-003b.sh  test-equivalence.sh
.claude/: settings.json
.config/: dotnet-tools.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-14T19-17-14-421Z.yml  page-2026-06-14T19-17-14-422Z.yml  page-2026-06-14T19-20-37-146Z.yml
.superpowers/sdd/: task5-fixes-report.md
docs/: SPIKE-58.md  auth.scxml  game.scxml  statechart.scxml
experiment/: README.md  directed-facts.json  manifest.json
experiment/erpc/: EventLog.fs  Identity.fs  Tools.fs
experiment/groundtruth/: cell-0000.json  cell-0001.json  cell-0010.json  cell-0011.json  cell-0100.json  cell-0101.json  cell-0110.json  cell-0111.json  cell-1000.json  cell-1001.json  cell-1010.json  cell-1011.json  cell-1100.json  cell-1101.json  cell-1110.json  cell-1111.json  cell-erpc.json
experiment/scorer/: Quality.fs  TicTacToe.Quality.fsproj
experiments/: HYPOTHESIS.md  L3_FINDINGS.md  README.md
experiments/discovery-harness/: ColdStart.fs  Driver.fs  Grader.fs  HtmlBoard.fs  Optimal.fs  Orchestrator.fs  Program.fs  TicTacToe.DiscoveryHarness.fsproj  Transcript.fs  run.sh
experiments/haiku-subagents/: README.md  arena.sh  friction.py  prompts.md  proxy.py
experiments/mcp-rpc/: EventLog.fs  Identity.fs  (+4 more)
hooks/: pre-push
mcp-http/: pyproject.toml  test_drive.py
mcp-http/mcp_http/: __init__.py  server.py
test/: AGENTS.md  CLAUDE.md
(+261 files in other folders)
