[project]
name = "mcp-http"
version = "0.1.0"
description = "A concise, hypertext-faithful HTTP client exposed as an MCP server. Surfaces the HTTP envelope (status, headers, body) and holds text/event-stream responses open so an agent can use HTTP as hypertext, not JSON transport."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-http = "mcp_http.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_http"]
